01. initial/objects/Questionnaire_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Agree_with_Question__c</fullName>
        <label>Agree with Question</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionnaireQuestion__c</fullName>
        <label>Questionnaire - Question</label>
        <referenceTo>Questionnaire_Question__c</referenceTo>
        <relationshipLabel>Questionnaire - Answers</relationshipLabel>
        <relationshipName>Questionnaire_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Returned__c</fullName>
        <label>Questionnaire Returned</label>
        <referenceTo>Questionnaire_Returned__c</referenceTo>
        <relationshipLabel>Questionnaire - Answers</relationshipLabel>
        <relationshipName>Questionnaire_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Questionnaire - Answer</label>
    <nameField>
        <displayFormat>ANSWER-{0000}</displayFormat>
        <label>Questionnaire - Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire - Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>